@@ -45,6 +45,8 @@ You can configure Tapir passing the following environment variables:
 |-----------------------------------------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|----------------------------------------------------------------|---------------------------------|
 | BACKEND_CONFIG                          | The database to make use of. Allowed values: elasticsearch, dynamodb, cosmosdb                                                                                                                                                                                                                                                                                                                                   | X                                                              | dynamodb                        |
 | BACKEND_ELASTICSEARCH_HOST              | Host of the Elasticsearch instance                                                                                                                                                                                                                                                                                                                                                                               | Yes, if BACKEND_CONFIG is elasticsearch                        |                                 |
+| BACKEND_ELASTICSEARCH_USER              | Username to authenticate on Elasticsearch                                                                                                                                                                                                                                                                                                                                                                        |                                                                |                                 |
+| BACKEND_ELASTICSEARCH_PASSWORD          | Password to authenticate on Elasticsearch                                                                                                                                                                                                                                                                                                                                                                        |                                                                |                                 |
 | BACKEND_AZURE_MASTER_KEY                | Master key of your CosmosDb                                                                                                                                                                                                                                                                                                                                                                                      | Yes, if BACKEND_CONFIG is cosmosdb                             |                                 |
 | BACKEND_AZURE_ENDPOINT                  | Endpoint of your CosmosDb                                                                                                                                                                                                                                                                                                                                                                                        | Yes, if BACKEND_CONFIG is cosmosdb                             |                                 |
 | STORAGE_CONFIG                          | The blob storage to make use of. Allowed values: s3, azureBlob, local                                                                                                                                                                                                                                                                                                                                            | X                                                              | s3                              |
