@@ -10,10 +10,13 @@ and this project adheres to https://semver.org/spec/v2.0.0.html[semantic version
 === fixes
 
 * https://github.com/PacoVK/tapir/issues/401[#401 - Fix SPA routing issue]
+* https://github.com/PacoVK/tapir/issues/411[#411 - Fix provider upload with CosmosDB backend]
 
 === added
 
 * https://github.com/PacoVK/tapir/issues/408[#408 - Add Azure containerapps example]
+* https://github.com/PacoVK/tapir/issues/414[#414 - Introduce Elasticsearch authentication configuration]
+
 
 === changed
 
